Valintaperusteiden lomakkeiden yhtenäistämistä

--- a/src/main/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/webapp/common/i18n/messages_fi_FI.properties
@@ -310,7 +310,7 @@ valintatapajono.varasijasaantoja=Varasijas\u00E4\u00E4nt\u00F6j\u00E4 k\u00E4yte
 valintatapajono.varasijoja=Varasijoja t\u00E4ytet\u00E4\u00E4n asti
 valintatapajono.huomioitavien=Huomioitavien varasijojen m\u00E4\u00E4r\u00E4 rajattu
 valintatapajono.varasijataytto=Varasijat\u00E4ytt\u00F6 poissa olevaksi ilmoittautuneiden tilalle
-valintatapajono.josjonoon=Jos jonoon j\u00E4\u00E4 t\u00E4ytt\u00E4m\u00E4tt\u00F6mi\u00E4 aloituspaikkoja, niit\u00E4 t\u00E4ytet\u00E4\u00E4n jonosta
+valintatapajono.josjonoon=Jos jonoon j\u00E4\u00E4 t\u00E4ytt\u00E4m\u00E4tt\u00F6mi\u00E4 aloituspaikkoja, aloituspaikat siirret\u00E4\u00E4n jonoon
 valintatapajono.jono=jono
 valintatapajono.muodostumiskriteerit=Jonon muodostumiskriteerit
 valintatapajono.aktiivinen=Aktiivinen
