OK-140: Hakutoive ryhmässä added to laskentakaavapuu

--- a/src/main/webapp/common/i18n/messages_en_US.properties
+++ b/src/main/webapp/common/i18n/messages_en_US.properties
@@ -199,6 +199,7 @@ laskentakaavat.puu.huonoin 				= huonoin
 laskentakaavat.puu.keskiarvonparasta 	= suurimman keskiarvo
 laskentakaavat.puu.summanparasta 		= suurimman summa
 laskentakaavat.puu.hakutoive 			= hakutoive
+laskentakaavat.puu.hakutoiveryhmassa	= hakutoive hakukohderyhmässä
 laskentakaavat.puu.summa 				= Summa
 laskentakaavat.puu.osoittaja 			= osoittaja
 laskentakaavat.puu.nimittaja 			= Nimittäjä
@@ -251,6 +252,7 @@ laskentakaavat.funktiokutsu.TOTUUSARVO = Totuusarvo
 laskentakaavat.funktiokutsu.JA = Ja 
 laskentakaavat.funktiokutsu.DEMOGRAFIA = Demografia
 laskentakaavat.funktiokutsu.HAKUTOIVE = Hakutoive
+laskentakaavat.funktiokutsu.HAKUTOIVERYHMASSA = Hakutoive hakukohderyhmässä
 laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI = Hae merkkijono ja konvertoi totuusarvoksi
 laskentakaavat.funktiokutsu.HAEMERKKIJONOJAVERTAAYHTASUURUUS = Hae merkkijono ja vertaa yhtäsuuruus
 laskentakaavat.funktiokutsu.VALINTAPERUSTEYHTASUURUUS = Valintaperusteyhtasuuruus
