--- a/src/main/webapp/common/i18n/messages_sv_SE.properties
+++ b/src/main/webapp/common/i18n/messages_sv_SE.properties
@@ -213,6 +213,7 @@ laskentakaavat.puu.huonoin 				= huonoin
 laskentakaavat.puu.keskiarvonparasta 	= suurimman keskiarvo
 laskentakaavat.puu.summanparasta 		= suurimman summa
 laskentakaavat.puu.hakutoive 			= hakutoive
+laskentakaavat.puu.hakutoiveryhmassa	= hakutoive hakukohderyhmässä
 laskentakaavat.puu.summa 				= Summa
 laskentakaavat.puu.osoittaja 			= osoittaja
 laskentakaavat.puu.nimittaja 			= Nimittäjä
@@ -265,6 +266,7 @@ laskentakaavat.funktiokutsu.TOTUUSARVO = Totuusarvo
 laskentakaavat.funktiokutsu.JA = Ja 
 laskentakaavat.funktiokutsu.DEMOGRAFIA = Demografia
 laskentakaavat.funktiokutsu.HAKUTOIVE = Hakutoive
+laskentakaavat.funktiokutsu.HAKUTOIVERYHMASSA = Hakutoive hakukohderyhmässä
 laskentakaavat.funktiokutsu.HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI = Hae merkkijono ja konvertoi totuusarvoksi
 laskentakaavat.funktiokutsu.HAEMERKKIJONOJAVERTAAYHTASUURUUS = Hae merkkijono ja vertaa yhtäsuuruus
 laskentakaavat.funktiokutsu.VALINTAPERUSTEYHTASUURUUS = Valintaperusteyhtasuuruus
@@ -546,6 +548,7 @@ laskentakaavapuu.totuusarvo=Totuusarvo
 laskentakaavapuu.ja=Ja
 laskentakaavapuu.demografia=Demografia
 laskentakaavapuu.hakutoive=Hakutoive
+laskentakaavapuu.hakutoiveryhmassa=Hakutoive hakukohderyhmässä
 laskentakaavapuu.haemerkkijonototuusarvoksi=Hae merkkijono ja konvertoi totuusarvoksi
 laskentakaavapuu.haemerkkijonoyhtasuuruus=Hae merkkijono ja vertaa yht\u00E4suuruus
 laskentakaavapuu.valintaperusteyhtasuuruus=Valintaperusteyht\u00E4suuruus
