VTKU-98: Lisää ammatillisen arvosanan haku

--- a/src/main/resources/webapp/common/i18n/messages_en_US.properties
+++ b/src/main/resources/webapp/common/i18n/messages_en_US.properties
@@ -241,6 +241,7 @@ laskentakaavat.funktiokutsu.PAINOTETTUKESKIARVO = Painotettu keskiarvo
 laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
 laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
 laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.HAEAMMATILLINENARVOSANA = Ammatillinen arvosana
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
