--- a/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
@@ -255,6 +255,7 @@ laskentakaavat.funktiokutsu.PAINOTETTUKESKIARVO = Painotettu keskiarvo
 laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
 laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
 laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.HAEAMMATILLINENARVOSANA = Ammatillinen arvosana
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
@@ -537,6 +538,7 @@ laskentakaavapuu.haelukuarvoehdolla=Hae lukuarvo ehdolla
 laskentakaavapuu.yoarvosana=YO-arvosana
 laskentakaavapuu.viittaus=Viittaus toiseen kaavaan
 laskentakaavapuu.haetotuusarvo=Hae totuusarvo
+laskentakaavapuu.ammatillinenarvosana=Ammatillinen arvosana
 laskentakaavapuu.tai=Tai
 laskentakaavapuu.suurempitaiyhtasuuri=Suurempi tai yht\u00E4 suuri
 laskentakaavapuu.suurempi=Suurempi
