--- a/src/main/resources/webapp/common/i18n/messages_en_US.properties
+++ b/src/main/resources/webapp/common/i18n/messages_en_US.properties
@@ -242,6 +242,7 @@ laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
 laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
 laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVOSANA = Ammatillinen yto:n arvosana
+laskentakaavat.funktiokutsu.ONKOAMMATILLINENYTOARVIOINTIASTEIKKO = Onko ammatillinen yto-arviointiasteikko
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
