--- a/src/main/resources/webapp/common/i18n/messages_sv_SE.properties
+++ b/src/main/resources/webapp/common/i18n/messages_sv_SE.properties
@@ -256,6 +256,7 @@ laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
 laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
 laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVOSANA = Ammatillinen yto:n arvosana
+laskentakaavat.funktiokutsu.ONKOAMMATILLINENYTOARVIOINTIASTEIKKO = Onko ammatillinen yto-arviointiasteikko
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
@@ -539,6 +540,7 @@ laskentakaavapuu.yoarvosana=YO-arvosana
 laskentakaavapuu.viittaus=Viittaus toiseen kaavaan
 laskentakaavapuu.haetotuusarvo=Hae totuusarvo
 laskentakaavapuu.ammatillinenarvosana=Ammatillinen arvosana
+laskentakaavapuu.onkoammatillinenytoarviointiasteikko=Onko ammatillinen yto-arviointiasteikko
 laskentakaavapuu.tai=Tai
 laskentakaavapuu.suurempitaiyhtasuuri=Suurempi tai yht\u00E4 suuri
 laskentakaavapuu.suurempi=Suurempi
