--- a/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
@@ -257,6 +257,7 @@ laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
 laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVOSANA = Ammatillinen yto:n arvosana
 laskentakaavat.funktiokutsu.ONKOAMMATILLINENYTOARVIOINTIASTEIKKO = Onko ammatillinen yto-arviointiasteikko
+laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVIOINTIASTEIKKO = Ammatillinen yto:n arviointiasteikko
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
