--- a/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
@@ -255,6 +255,7 @@ laskentakaavat.funktiokutsu.PAINOTETTUKESKIARVO = Painotettu keskiarvo
 laskentakaavat.funktiokutsu.HAELUKUARVOEHDOLLA = Hae lukuarvo ehdolla
 laskentakaavat.funktiokutsu.HAEYOARVOSANA = YO-arvosana
 laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
+laskentakaavat.funktiokutsu.ITEROIAMMATILLISETTUTKINNOT = Iteroi ammatilliset perustutkinnot
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVOSANA = Ammatillinen yto:n arvosana
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVIOINTIASTEIKKO = Ammatillinen yto:n arviointiasteikko
 laskentakaavat.funktiokutsu.TAI 		= Tai
