--- a/src/main/resources/webapp/common/i18n/messages_sv_SE.properties
+++ b/src/main/resources/webapp/common/i18n/messages_sv_SE.properties
@@ -303,6 +303,7 @@ valintatapajono.aloituspaikat=Aloituspaikat
 valintatapajono.siirretaansijoitteluun=Siirret\u00E4\u00E4n sijoitteluun
 valintatapajono.kaytetaan=K\u00E4ytet\u00E4\u00E4n valintalaskentaa
 valintatapajono.kaikkiehdon=Kaikki ehdon t\u00E4ytt\u00E4v\u00E4t hyv\u00E4ksyt\u00E4\u00E4n
+valintatapajono.eiLasketaPaivamaaranJalkeen=Ei lasketa p\u00E4iv\u00E4m\u00E4\u00E4r\u00E4n j\u00E4lkeen
 valintatapajono.tasasijasaanto=Tasasijas\u00E4\u00E4nt\u00F6
 valintatapajono.ylitaytto=Ylit\u00E4ytt\u00F6
 valintatapajono.alitaytto=Alit\u00E4ytt\u00F6
