VTKU-102 : Lisää uudet funktiot

--- a/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
+++ b/src/main/resources/webapp/common/i18n/messages_fi_FI.properties
@@ -258,6 +258,11 @@ laskentakaavat.funktiokutsu.HAETOTUUSARVO = Arvo hakemukselta
 laskentakaavat.funktiokutsu.ITEROIAMMATILLISETTUTKINNOT = Iteroi ammatilliset perustutkinnot
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVOSANA = Ammatillinen yto:n arvosana
 laskentakaavat.funktiokutsu.HAEAMMATILLINENYTOARVIOINTIASTEIKKO = Ammatillinen yto:n arviointiasteikko
+laskentakaavat.funktiokutsu.ITEROIAMMATILLISETOSAT = Iteroi ammatillisen tutkinnon osat
+laskentakaavat.funktiokutsu.HAEAMMATILLISENOSANLAAJUUS = Ammatillisen tutkinnon osan laajuus
+laskentakaavat.funktiokutsu.HAEAMMATILLISENOSANARVOSANA = Ammatillisen tutkinnon osan arvosana
+laskentakaavat.funktiokutsu.HAEAMMATILLISENTUTKINNONKESKIARVO = Ammatillisen tutkinnon tallennettu keskiarvo
+laskentakaavat.funktiokutsu.HAEAMMATILLISENTUTKINNONSUORITUSTAPA = Ammatillinen tutkinnon suoritustapa
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
