VTKU-103 : Lisää YTO-osa-aluefunktiot

--- a/src/main/resources/webapp/common/i18n/messages_en_US.properties
+++ b/src/main/resources/webapp/common/i18n/messages_en_US.properties
@@ -249,6 +249,9 @@ laskentakaavat.funktiokutsu.HAEAMMATILLISENOSANLAAJUUS = Ammatillisen tutkinnon 
 laskentakaavat.funktiokutsu.HAEAMMATILLISENOSANARVOSANA = Ammatillisen tutkinnon osan arvosana
 laskentakaavat.funktiokutsu.HAEAMMATILLISENTUTKINNONKESKIARVO = Ammatillisen tutkinnon tallennettu keskiarvo
 laskentakaavat.funktiokutsu.HAEAMMATILLISENTUTKINNONSUORITUSTAPA = Ammatillinen tutkinnon suoritustapa
+laskentakaavat.funktiokutsu.ITEROIAMMATILLISETYTOOSAALUEET = Iteroi ammatillisen perustutkinnon YTOn osa-alueet
+laskentakaavat.funktiokutsu.HAEAMMATILLISENYTOOSAALUEENLAAJUUS = Ammatillisen perustutkinnon YTOn osa-alueen laajuus
+laskentakaavat.funktiokutsu.HAEAMMATILLISENYTOOSAALUEENARVOSANA = Ammatillisen perustutkinnon YTOn osa-alueen arvosana 
 laskentakaavat.funktiokutsu.TAI 		= Tai
 laskentakaavat.funktiokutsu.SUUREMPITAIYHTASUURI = Suurempi tai yhtä suuri
 laskentakaavat.funktiokutsu.SUUREMPI = Suurempi
